[package]
name = "rtt_rs2"
version = "0.0.1"
authors = ["chenhonglinchl <chenhonglinchl@aliyun.com>"]
edition = "2021"
description = "rtthread supprot library"
license = "MIT"

[dependencies]
bitfield = "0.13.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
atomic-polyfill = "0.1.3"
cstr_core = "0.2.4"
cty = "0.2.2"

[build-dependencies]
bindgen = "0.53.1"

[features]